@@ -1,4 +1,8 @@
 ---
+
+* [Bug 2858] bool support.  Use stdbool.h when available.  HStenn.
+
+---
 (4.2.8p6) 2016/01/20 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Sec 2935] Deja Vu: Replay attack on authenticated broadcast mode. HStenn.
